Fixed problem with header overlapping content div, add footer with styling, chosen font family

--- a/practice_app/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/practice_app/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -1,8 +1,52 @@
 @import "twitter/bootstrap/bootstrap";
 @import "twitter/bootstrap/responsive";
 
-body { padding-top: 60px; }
+div.navbar-fixed-top { padding-bottom: 0; margin-bottom: 0; }
+
+@media only screen and (max-width: 768px) {
+  body { padding-top:0; }
+  .content { padding-top: 0px; }
+}
+
+@media only screen and (min-width: 768px) {
+  body { padding-top:0; }
+  .content { padding-top: 0px; }
+}
+
+@media only screen and (min-width: 980px) and (max-width: 991px) {
+  body { padding-top:0; }
+  .content { padding-top: 40px; }
+}
+
+@media only screen and (min-width: 992px) {
+  body { padding-top:0; }
+  .content { padding-top: 40px; }
+}
+
+@media only screen and (min-width: 1200px) {
+  body { padding-top:0; }
+  .content { padding-top: 40px; }
+}
+
+.black { color:black; }
 .carousel-caption { color: white !important; }
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Nixie One', cursive;
+}
+p, div {
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+
+#footer {
+background-color: #f5f5f5;
+}
+
+.footer .credit {
+margin: 20px 0;
+}
+.muted {
+color: #999999;
+}
 
 // Set the correct sprite paths
 @iconSpritePath: image-url("twitter/bootstrap/glyphicons-halflings.png");
